[gd_scene load_steps=10 format=3 uid="uid://bhsy2yjledrlk"]

[ext_resource type="Script" path="res://scripts/pochod/pochod.gd" id="1_qexh3"]
[ext_resource type="AudioStream" uid="uid://ckn3p2q0qqrhg" path="res://audio/pochod_zrychleny.mp3" id="2_jtcq1"]
[ext_resource type="Theme" uid="uid://sue4tlr8wwrf" path="res://resources/themes/default.tres" id="3_dj77m"]
[ext_resource type="Texture2D" uid="uid://c88saiw0abdsy" path="res://images/slavnostni_pochod/vojaci.png" id="3_g8mff"]
[ext_resource type="Texture2D" uid="uid://bfrtotn0hvwbp" path="res://images/slavnostni_pochod/background.png" id="4_245w8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5oubh"]
atlas = ExtResource("3_g8mff")
region = Rect2(0, 500, 1064, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8ier"]
atlas = ExtResource("3_g8mff")
region = Rect2(1064, 0, 1064, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk72j"]
atlas = ExtResource("3_g8mff")
region = Rect2(0, 0, 1064, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_igopd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oubh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8ier")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk72j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8ier")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oubh")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Pochod" type="Node2D"]
script = ExtResource("1_qexh3")
tolerance = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jtcq1")

[node name="bpm_label" type="Label" parent="."]
z_index = 1
offset_left = 331.0
offset_top = 902.0
offset_right = 1208.0
offset_bottom = 1083.0
text = "BPM is:"

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = 326.0
offset_top = 947.0
offset_right = 1707.0
offset_bottom = 1032.0
max_value = 150.0
step = 1.0
show_percentage = false

[node name="idle_timer" type="Timer" parent="."]

[node name="soldiers" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(1320, 494)
sprite_frames = SubResource("SpriteFrames_igopd")

[node name="background" type="Sprite2D" parent="."]
texture = ExtResource("4_245w8")
offset = Vector2(960, 540)

[node name="game_over_menu" type="Control" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1910.0
offset_bottom = 1081.0
mouse_filter = 2

[node name="exit_button" type="Button" parent="game_over_menu"]
z_index = 1
offset_left = 561.0
offset_top = 751.0
offset_right = 961.0
offset_bottom = 851.0
theme = ExtResource("3_dj77m")
text = "zpět"

[node name="restart_button" type="Button" parent="game_over_menu"]
z_index = 1
offset_left = 1041.0
offset_top = 751.0
offset_right = 1441.0
offset_bottom = 851.0
theme = ExtResource("3_dj77m")
text = "dáme si ještě jedno kolečko"

[node name="game_over_message" type="Label" parent="game_over_menu"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -389.0
offset_top = -59.5
offset_right = 389.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "KONEC HRY"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="game_over_menu"]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
color = Color(0, 0, 0, 0.74902)

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="button_up" from="game_over_menu/exit_button" to="." method="_on_exit_button_button_up"]
[connection signal="button_up" from="game_over_menu/restart_button" to="." method="_on_restart_button_button_up"]
